This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Version ???

--Fixed a memory leak in transitionBank.

--Fixed crash if a soundBank sound is not mono and thus fails to load.



Server Fixes:

--AHAP Steam Build script now includes snapshot of most recent AHAP content
  data, so that new users on Steam don't face a huge content download as their
  initial experience.  Note that as AHAP development progresses, binary updates
  will be infrequent, so the content included with the Steam binary bundle will
  lag behind over time.  But at least they won't have to download absolutely
  every bit of content from scratch (there's already about 50MB of it, just in
  the starter content alone).

--New script for bundling latest AHAP data with most recent base Windows and
  Linux binary distributions (what people first download to play AHAP
  off-Steam).




Version 415   2024-March-15

--Moving bulk download portion of a web request into a separate thread for
  maximum throughput while still updating GUI with progress.  Old thread-free
  method, using non-blocking IO, would not achieve maximum download speeds on
  fast connections because OS receive buffer would fill up when we're waiting
  for vsync.



Version 414   2024-March-12

--Actually, we can't load mods into RAM only in an active Editor, since they
  pollute the object, sprite, and sound ID space.  If the Editor ever creates
  a new object, sprite, or sound while the RAM-only mod is loaded, it will
  either need to leave a gap in the ID space on disk, or overwrite the mod
  data.  Fixed the Editor to only IMPORT ADD and IMPORT REPLACE, and not load
  anything from the mods folder.  Only the game client can load mods.

--Each sound in the soundBank folder now has a .txt file tracking authorship.

--OXZ export/import files now track authorship tags for sounds.

--Fixed so that when importing authorless sprites from OXZ files, we don't